name:                haskell-ln-types
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/haskell-ln-types#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.T
                       LN.T.ACL
                       LN.T.Api
                       LN.T.Board
                       LN.T.Bucket
                       LN.T.Convert
                       LN.T.Count
                       LN.T.DepList
                       LN.T.Ent
                       LN.T.Error
                       LN.T.Forum
                       LN.T.GlobalGroup
                       LN.T.Group
                       LN.T.GroupMember
                       LN.T.Job
                       LN.T.Leuron
                       LN.T.LeuronTraining
                       LN.T.Like
                       LN.T.Membership
                       LN.T.Organization
                       LN.T.Param
                       LN.T.Pack.Organization
                       LN.T.Pack.Team
                       LN.T.Pack.TeamMember
                       LN.T.Pack.User
                       LN.T.Pack.Sanitized.User
                       LN.T.Pack.GlobalGroup
                       LN.T.Pack.Group
                       LN.T.Pack.GroupMember
                       LN.T.Pack.Forum
                       LN.T.Pack.Board
                       LN.T.Pack.Thread
                       LN.T.Pack.ThreadPost
                       LN.T.Pack.Resource
                       LN.T.Pack.Leuron
                       LN.T.Pack.PmIn
                       LN.T.Pack.PmOut
                       LN.T.Permission
                       LN.T.Pm
                       LN.T.PmIn
                       LN.T.PmOut
                       LN.T.Profile
                       LN.T.Reminder
                       LN.T.Resource
                       LN.T.Size
                       LN.T.Splits
                       LN.T.Substitutions
                       LN.T.Star
                       LN.T.Team
                       LN.T.TeamMember
                       LN.T.Thread
                       LN.T.ThreadPost
                       LN.T.User
                       LN.T.Visibility
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , data-default
                     , text
                     , time
                     , haskell-api-helpers
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite haskell-ln-types-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-ln-types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/haskell-ln-types
