name:                haskell-lnforum-types
version:             0.1.0.117
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/haskell-lnforum-types#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LN.T
                       LN.T.ACL
                       LN.T.Api
                       LN.T.Count
                       LN.T.DepList
                       LN.T.Ent
                       LN.T.Error
                       LN.T.Id
                       LN.T.Job
                       LN.T.Like
                       LN.T.Like.Extra
                       LN.T.Membership
                       LN.T.Param
                       LN.T.Pack.User
                       LN.T.Pack.Sanitized.User
                       LN.T.Permission
                       LN.T.Profile
                       LN.T.Size
                       LN.T.Star
                       LN.T.User
                       LN.T.Visibility
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , data-default
                     , deepseq
                     , text
                     , time
                     , haskell-api-helpers-shared
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite haskell-lnforum-types-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-lnforum-types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/haskell-lnforum-types
